--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,18 @@
         android:id="@+id/toolbar">
 
     </include>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcl_offers"
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFF"
         android:layout_below="@+id/toolbar"
-        android:scrollbars="vertical">
-
-    </android.support.v7.widget.RecyclerView>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        layout="@layout/bottom_nav_bar"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
