--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -70,29 +70,8 @@
 
 
     </RelativeLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:text="Offers"
-            android:gravity="center"
-            android:textColor="#000"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:text="Requests"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textColor="#000"
-            android:layout_weight="1"/>
-    </LinearLayout>
+
+    <include layout="@layout/bottom_nav_bar"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/vpg_viewpager"
         android:layout_width="match_parent"
