--- a/app/src/main/res/layout/activity_current_user.xml
+++ b/app/src/main/res/layout/activity_current_user.xml
@@ -5,17 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar">
+
+    </include>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
+        android:paddingTop="10dp"
         android:background="#000">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_profile"
             android:layout_width="70dp"
             android:layout_height="70dp"
+
             android:src="@drawable/ic_user"
-            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
             app:civ_circle_background_color="#FFFF"
             />
         <TextView
@@ -70,29 +78,8 @@
 
 
     </RelativeLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:text="Offers"
-            android:gravity="center"
-            android:textColor="#000"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:text="Requests"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textColor="#000"
-            android:layout_weight="1"/>
-    </LinearLayout>
+
+    <include layout="@layout/bottom_nav_bar"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/vpg_viewpager"
         android:layout_width="match_parent"
