--- a/app/src/main/res/layout/activity_add_generic_post.xml
+++ b/app/src/main/res/layout/activity_add_generic_post.xml
@@ -62,6 +62,111 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/ttv_sun"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:padding="5dp"
+                android:gravity="center"
+                android:text="S"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:background="@drawable/shape_text"
+                android:textColor="@color/colorGrey"
+                android:layout_marginRight="10dp"
+                />
+            <TextView
+                android:id="@+id/ttv_mon"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:padding="5dp"
+                android:textSize="15sp"
+                android:text="M"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/shape_text"
+                android:textColor="@color/colorGrey"
+                />
+            <TextView
+                android:id="@+id/ttv_tue"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:padding="5dp"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:layout_marginRight="10dp"
+                android:text="T"
+                android:textStyle="bold"
+                android:background="@drawable/shape_text"
+                android:textColor="@color/colorGrey"
+                />
+            <TextView
+                android:id="@+id/ttv_wed"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:padding="5dp"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:layout_marginRight="10dp"
+                android:text="W"
+                android:textStyle="bold"
+                android:background="@drawable/shape_text"
+                android:textColor="@color/colorGrey"
+                />
+            <TextView
+                android:id="@+id/ttv_thur"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:padding="5dp"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:layout_marginRight="10dp"
+                android:text="T"
+                android:textStyle="bold"
+                android:background="@drawable/shape_text"
+                android:textColor="@color/colorGrey"
+                />
+            <TextView
+                android:id="@+id/ttv_fri"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:padding="5dp"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:layout_marginRight="10dp"
+                android:text="F"
+                android:textStyle="bold"
+                android:background="@drawable/shape_text"
+                android:textColor="@color/colorGrey"
+                />
+            <TextView
+                android:id="@+id/ttv_sat"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:padding="5dp"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:text="S"
+                android:textStyle="bold"
+                android:background="@drawable/shape_text"
+                android:textColor="@color/colorGrey"
+                />
+        </LinearLayout>
+    </HorizontalScrollView>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
