--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+<include layout="@layout/toolbar">
 
+</include>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,13 +49,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#57646c"
-                    android:text="Days: "/>
-                <TextView
+                    android:textSize="20sp"
+                    android:text="Full Name: "/>
+                <EditText
                     android:id="@+id/ttv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#57646c"
-                    android:text="Time: "/>
+                    android:layout_marginLeft="5dp"
+                    android:hint="Enter Name Here"/>
 
             </LinearLayout>
         </LinearLayout>
@@ -89,23 +93,23 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/ttv_origin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#57646c"
-                    android:text="Origin: "/>
-                <TextView
+                    android:textSize="20sp"
+                    android:text="City: "/>
+                <EditText
                     android:id="@+id/ttv_destination"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#57646c"
-                    android:text="Destination: "/>
-                <TextView
-                    android:id="@+id/ttv_city"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-                    android:text="City: "/>
+
+                    android:paddingBottom="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:layout_marginLeft="5dp"
+                    android:hint="Enter your city here "/>
+
             </LinearLayout>
         </LinearLayout>
 
@@ -140,31 +144,88 @@
                 android:padding="5dp"
                 android:orientation="vertical">
 
+
                 <TextView
-                    android:id="@+id/ttv_publisher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#57646c"
-                    android:text="Published by: "/>
-                <TextView
-                    android:id="@+id/ttv_created"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-                    android:text="Posted on: "/>
-                <TextView
+                    android:textSize="20sp"
+                    android:text="Contact number: "/>
+                <EditText
                     android:id="@+id/ttv_contact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
                     android:textColor="#57646c"
-                    android:text="Contact: "/>
+                    android:background="@android:color/transparent"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:inputType="number"
+                    android:hint="Enter phone number here "/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#57646c"
+                    android:textSize="20sp"
+
+                    android:text="Driver or passenger: "/>
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="wrap_content"
+                    android:theme="@style/AppTheme"
+                    android:layout_height="wrap_content">
+                </Spinner>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#57646c"
+                    android:textSize="20sp"
+
+                    android:text="Change Password: "/>
+                <TextView
+                    android:id="@+id/ttv_renew_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:textColor="#57646c"
+                    android:layout_marginLeft="5dp"
+                    android:text="@string/show_alert"/>
+                <EditText
+                    android:id="@+id/edt_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="#57646c"
+                    android:visibility="gone"
+                    android:background="@android:color/transparent"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:hint="Current password"/>
+                <EditText
+                    android:id="@+id/edt_password_new"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:background="@android:color/transparent"
+                    android:textColor="#57646c"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:hint="New password "/>
                 <Button
                     android:id="@+id/btn_attend"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="end"
-                    android:text="Call"
+                    android:text="SAVE"
                     android:textColor="#fff"
+
+                    android:clickable="false"
                     android:background="@drawable/shape"/>
             </LinearLayout>
 
