--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-<include layout="@layout/toolbar">
+    <include layout="@layout/toolbar">
 
-</include>
+    </include>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -161,8 +161,7 @@
                     android:paddingRight="10dp"
                     android:paddingTop="10dp"
                     android:inputType="number"
-                    android:clickable="false"
-                    android:hint="+27710084798"/>
+                    android:hint="Enter phone number here "/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -182,34 +181,22 @@
                     android:textColor="#57646c"
                     android:textSize="20sp"
 
-                    android:text="Change Password: "/>
-                <TextView
-                    android:id="@+id/ttv_renew_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp"
-                    android:textColor="#57646c"
-                    android:layout_marginLeft="5dp"
-                    android:text="@string/show_alert"/>
+                    android:text="Password: "/>
+
                 <EditText
                     android:id="@+id/edt_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:textColor="#57646c"
-                    android:visibility="gone"
                     android:background="@android:color/transparent"
                     android:paddingBottom="10dp"
                     android:paddingRight="10dp"
                     android:paddingTop="10dp"
-
                     android:inputType="textPassword"
-                    android:hint="Current password"/>
+                    android:hint="Enter password"/>
                 <EditText
-                    android:id="@+id/edt_password_new"
-                    android:visibility="gone"
+                    android:id="@+id/edt_password_confirm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -219,13 +206,13 @@
                     android:paddingRight="10dp"
                     android:paddingTop="10dp"
                     android:inputType="textPassword"
-                    android:hint="New password "/>
+                    android:hint="Confirm password "/>
                 <Button
-                    android:id="@+id/btn_save"
+                    android:id="@+id/btn_submit"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="end"
-                    android:text="SAVE"
+                    android:text="SUBMIT"
                     android:textColor="#fff"
 
                     android:clickable="false"
