--- a/app/src/main/res/layout/private_user_offers_fragment.xml
+++ b/app/src/main/res/layout/private_user_offers_fragment.xml
@@ -21,7 +21,7 @@
         android:layout_gravity="bottom"
 
         android:clickable="true"
-        android:src="@drawable/offer"
+        android:src="@drawable/offer_white"
         app:backgroundTint="#000"
         app:borderWidth="0dp"
         app:elevation="6dp"
