added connection to api not complete/trail

--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ttv_app_title"
         android:gravity="center"
-        android:text="A Smart Way To Travel, with lift clubs."
+        android:text="A Smart Way To Travel, With Lift Clubs."
         android:textColor="#fff"
         android:textSize="20sp"
         android:textStyle="bold" />
