--- a/app/src/main/res/layout/filters_layout.xml
+++ b/app/src/main/res/layout/filters_layout.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/lin_filters"
-    android:layout_marginBottom="10dp"
-    android:visibility="gone">
+    android:layout_marginBottom="10dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
