--- a/app/src/main/res/layout/private_user_offers_fragment.xml
+++ b/app/src/main/res/layout/private_user_offers_fragment.xml
@@ -11,6 +11,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     </android.support.v7.widget.RecyclerView>
+
+    <include android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" layout="@layout/nopost_layout"></include>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_booking"
         android:layout_width="wrap_content"
