--- a/app/src/main/res/layout/request_fragment_layout.xml
+++ b/app/src/main/res/layout/request_fragment_layout.xml
@@ -10,5 +10,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     </android.support.v7.widget.RecyclerView>
+    <include android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" layout="@layout/nopost_layout"></include>
+
 
 </RelativeLayout>
