added rough sign out option

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,5 +4,6 @@
     app:titleTextColor="#FFF"
     android:theme="@style/CustomStyle"
     android:elevation="4dp"
+    app:popupTheme="@style/CustomStylePopUp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" />
