--- a/app/src/main/res/menu/tool_bar_menu.xml
+++ b/app/src/main/res/menu/tool_bar_menu.xml
@@ -3,9 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/settings"
-        android:icon="@drawable/baseline_settings_black_36dp"
-        app:showAsAction="ifRoom"
-        android:orderInCategory="300"
-        android:title="settings"
+        android:title="Settings"
+        />
+    <item
+        android:id="@+id/signout"
+        android:title="Sign Out"
+        />
+    <item
+        android:id="@+id/about"
+        android:title="About"
         />
 </menu>
