--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,12 +17,19 @@
     <style name="CustomStyle">
         <item name="android:background">#0a0808</item>
         <item name="colorControlNormal">#FFFF</item>
+        <item name="actionMenuTextColor">#FFFF</item>
+
     </style>
 
     <style name="CustomSpinnerStyle">
         <item name="android:numbersTextColor">#de0808</item>
         <item name="android:numbersSelectorColor">#88f20808</item>
         <item name="android:numbersBackgroundColor">#fff</item>
+    </style>
+
+    <style name="CustomStylePopUp">
+        <item name="android:background">#ffffff</item>
+        <item name="android:textColor">#000000</item>
     </style>
 
 </resources>
