--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,231 +23,219 @@
         app:cardElevation="4dp"
         app:cardPreventCornerOverlap="false"
         app:contentPadding="0dp">
-
-
-
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="34dp"
-                android:layout_height="34dp"
-                android:paddingTop="8dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:src="@drawable/ic_clock"
-                />
+            android:layout_height="match_parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-                    android:textSize="20sp"
-                    android:text="Full Name: "/>
-                <EditText
-                    android:id="@+id/edt_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-                    android:layout_marginLeft="5dp"
-                    android:hint="Enter Name Here"/>
-
-            </LinearLayout>
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        app:cardBackgroundColor="#ffffff"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="4dp"
-        app:cardPreventCornerOverlap="false"
-        app:contentPadding="0dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="34dp"
-                android:layout_height="34dp"
-                android:paddingTop="8dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:src="@drawable/ic_location"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-                    android:textSize="20sp"
-                    android:text="City: "/>
-                <AutoCompleteTextView
-                    android:id="@+id/edt_city"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp"
-                    android:layout_marginLeft="5dp"
-                    android:hint="Enter your city here "/>
-
-            </LinearLayout>
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        app:cardBackgroundColor="#ffffff"
-        android:layout_marginBottom="5dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="4dp"
-        app:cardPreventCornerOverlap="false"
-        app:contentPadding="0dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="34dp"
-                android:layout_height="34dp"
-                android:paddingTop="8dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:src="@drawable/ic_user"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-                    android:textSize="20sp"
-                    android:text="Contact number: "/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <com.rilixtech.CountryCodePicker
-                        android:id="@+id/ccp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:ccp_hideNameCode="true"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
-                        android:paddingTop="10dp"
-                        />
-                    <EditText
-                        android:id="@+id/edt_contact"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:textColor="#57646c"
-                        android:background="@android:color/transparent"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
-                        android:paddingTop="10dp"
-                        android:inputType="number"
-                        android:hint="Enter number"/>
-
-                    <Button
-                        android:id="@+id/btn_verify"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="5dp"
-                        android:background="#000"
-                        android:gravity="center"
-                        android:paddingBottom="10dp"
-                        android:paddingTop="10dp"
-                        android:text="VERIFY"
-                        android:textColor="#fcfafa" />
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-                    android:textSize="20sp"
-
-                    android:text="Driver or passenger: "/>
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:layout_width="wrap_content"
-                    android:theme="@style/AppTheme"
-                    android:layout_height="wrap_content">
-                </Spinner>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#57646c"
-                    android:textSize="20sp"
-
-                    android:text="Password: "/>
-
-                <EditText
-                    android:id="@+id/edt_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:textColor="#57646c"
-                    android:background="@android:color/transparent"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp"
-                    android:inputType="textPassword"
-                    android:hint="Enter password"/>
-                <EditText
-                    android:id="@+id/edt_password_confirm"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:background="@android:color/transparent"
-                    android:textColor="#57646c"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp"
-                    android:inputType="textPassword"
-                    android:hint="Confirm password "/>
-                <Button
-                    android:id="@+id/btn_submit"
-                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:text="SUBMIT"
-                    android:textColor="#fff"
-                    android:clickable="false"
-                    android:background="@drawable/shape"/>
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="34dp"
+                        android:layout_height="34dp"
+                        android:paddingTop="8dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:src="@drawable/ic_clock"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#57646c"
+                            android:textSize="20sp"
+                            android:text="Full Name: "/>
+                        <EditText
+                            android:id="@+id/edt_username"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#57646c"
+                            android:layout_marginLeft="5dp"
+                            android:hint="Enter Name Here"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="34dp"
+                        android:layout_height="34dp"
+                        android:paddingTop="8dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:src="@drawable/ic_location"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#57646c"
+                            android:textSize="20sp"
+                            android:text="City: "/>
+                        <AutoCompleteTextView
+                            android:id="@+id/edt_city"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:textColor="#57646c"
+
+                            android:paddingBottom="10dp"
+                            android:paddingRight="10dp"
+                            android:paddingTop="10dp"
+                            android:layout_marginLeft="5dp"
+                            android:hint="Enter your city here "/>
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="34dp"
+                        android:layout_height="34dp"
+                        android:paddingTop="8dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:src="@drawable/ic_user"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:orientation="vertical">
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#57646c"
+                            android:textSize="20sp"
+                            android:text="Contact number: "/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+                            <com.rilixtech.CountryCodePicker
+                                android:id="@+id/ccp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:ccp_hideNameCode="true"
+                                android:paddingBottom="10dp"
+                                android:paddingRight="10dp"
+                                android:paddingTop="10dp"
+                                />
+                            <EditText
+                                android:id="@+id/edt_contact"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:textColor="#57646c"
+                                android:background="@android:color/transparent"
+                                android:paddingBottom="10dp"
+                                android:paddingRight="10dp"
+                                android:paddingTop="10dp"
+                                android:inputType="number"
+                                android:hint="Enter number"/>
+
+
+                        </LinearLayout>
+                        <Button
+                            android:id="@+id/btn_verify"
+                            android:layout_width="wrap_content"
+                            android:layout_height="35dp"
+                            android:background="#000"
+                            android:gravity="center"
+                            android:paddingBottom="10dp"
+                            android:paddingTop="10dp"
+                            android:text="VERIFY"
+                            android:textColor="#fcfafa" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#57646c"
+                            android:textSize="20sp"
+
+                            android:text="Driver or passenger: "/>
+                        <Spinner
+                            android:id="@+id/spinner"
+                            android:layout_width="wrap_content"
+                            android:theme="@style/AppTheme"
+                            android:layout_height="wrap_content">
+                        </Spinner>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#57646c"
+                            android:textSize="20sp"
+
+                            android:text="Password: "/>
+
+                        <EditText
+                            android:id="@+id/edt_password"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:textColor="#57646c"
+                            android:background="@android:color/transparent"
+                            android:paddingBottom="10dp"
+                            android:paddingRight="10dp"
+                            android:paddingTop="10dp"
+                            android:inputType="textPassword"
+                            android:hint="Enter password"/>
+                        <EditText
+                            android:id="@+id/edt_password_confirm"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:background="@android:color/transparent"
+                            android:textColor="#57646c"
+                            android:paddingBottom="10dp"
+                            android:paddingRight="10dp"
+                            android:paddingTop="10dp"
+                            android:inputType="textPassword"
+                            android:hint="Confirm password "/>
+                        <Button
+                            android:id="@+id/btn_submit"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+
+                            android:text="SUBMIT"
+                            android:textColor="#fff"
+                            android:clickable="false"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:layout_marginTop="10dp"
+                            android:background="#000"/>
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
             </LinearLayout>
-
-
-        </LinearLayout>
-
+        </ScrollView>
     </android.support.v7.widget.CardView>
+
 
 
 
