--- a/app/src/main/res/layout/private_user_offers_fragment.xml
+++ b/app/src/main/res/layout/private_user_offers_fragment.xml
@@ -8,6 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
+        android:paddingBottom="100dp"
+        android:clipToPadding="false"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     </android.support.v7.widget.RecyclerView>
