--- a/app/src/main/res/layout/new_sign_in_layout.xml
+++ b/app/src/main/res/layout/new_sign_in_layout.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_below="@+id/toolbar_sign_up"
         android:orientation="vertical">
 
