added controllers for the new signup and login

--- a/app/src/main/res/layout/forgetten_password_layout.xml
+++ b/app/src/main/res/layout/forgetten_password_layout.xml
@@ -52,22 +52,22 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="edt_first_digit"
+                android:id="@+id/edt_first_digit"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <EditText
-                android:id="edt_second_digit"
+                android:id="@+id/edt_second_digit"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <EditText
-                android:id="edt_third_digit"
+                android:id="@+id/edt_third_digit"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <EditText
-                android:id="edt_forth_digit"
+                android:id="@+id/edt_forth_digit"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
