--- a/app/src/main/res/layout/verification_layout.xml
+++ b/app/src/main/res/layout/verification_layout.xml
@@ -22,8 +22,10 @@
             android:textStyle="bold"
             android:textSize="24sp"/>
         <LinearLayout
+            android:id="@+id/lin_display_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -32,6 +34,7 @@
                 android:textColor="#000"
                 android:textSize="15sp"/>
             <TextView
+                android:id="@+id/ttv_number_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -46,24 +49,28 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="edt_first_digit"
+                android:id="@+id/edt_first_digit"
                 android:layout_weight="1"
+                android:inputType="number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <EditText
-                android:id="edt_second_digit"
+                android:id="@+id/edt_second_digit"
                 android:layout_weight="1"
+                android:inputType="number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <EditText
-                android:id="edt_third_digit"
+                android:id="@+id/edt_third_digit"
                 android:layout_weight="1"
+                android:inputType="number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <EditText
-                android:id="edt_forth_digit"
+                android:id="@+id/edt_forth_digit"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
+                android:inputType="number"
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <Button
