--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -1,55 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:layout_width="match_parent"
-    android:background="#000"
+    android:background="#504037"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <TextView
         android:id="@+id/ttv_app_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="ZipTown"
-        android:textColor="#fff"
-        android:textSize="50sp"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/ttv_slogan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ttv_app_title"
-        android:gravity="center"
-        android:text="A Smart Way To Travel, With Lift Clubs."
-        android:textColor="#fff"
-        android:textSize="20sp"
+        android:textColor="#FFF"
+        android:textSize="40sp"
         android:textStyle="bold" />
 
-    <LinearLayout
+
+
+    <include layout="@layout/slider_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/lin_container"
+        android:layout_below="@+id/ttv_app_title"
+        android:layout_centerInParent="true"/>
+
+    <LinearLayout
+        android:id="@+id/lin_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@android:color/transparent"
         android:layout_alignParentBottom="true">
         <Button
             android:id="@+id/btn_sign_up"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="#FFF"
+            android:background="@drawable/shape_white"
             android:textColor="#000"
-            android:layout_margin="2dp"
-            android:text="SIGN UP"/>
+            android:textAllCaps="false"
+            android:layout_margin="5dp"
+            android:text="Sign up"/>
         <Button
             android:id="@+id/btn_sign_in"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="#FFF"
-            android:layout_margin="2dp"
+            android:textAllCaps="false"
+            android:background="@drawable/shape_trans"
+            android:layout_margin="5dp"
             android:layout_weight="1"
-            android:textColor="#000"
-            android:text="SIGN IN"/>
+            android:textColor="#FFF"
+            android:text="Sign in"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Terms of Service "
+                android:textColor="#f1f1f1"
+                android:textStyle="bold"
+                android:textSize="15sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="and "
+                android:textStyle="bold"
+                android:textColor="#898989"
+                android:textSize="15sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Privacy Policy."
+                android:textStyle="bold"
+                android:textColor="#f1f1f1"
+                android:textSize="15sp"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 
