--- a/app/src/main/res/layout/fullname_layout.xml
+++ b/app/src/main/res/layout/fullname_layout.xml
@@ -58,6 +58,8 @@
                     android:layout_height="wrap_content"
                     android:textColor="#57646c"
                     android:layout_weight="1"
+                    android:inputType="text"
+                    android:nextFocusDown="@id/edt_lname"
                     android:layout_marginLeft="5dp"
                     android:hint="First name"/>
                 <EditText
@@ -65,6 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#57646c"
+                    android:inputType="text"
                     android:layout_weight="1"
                     android:layout_marginLeft="8dp"
                     android:hint="Last name"/>
