--- a/app/src/main/res/layout/new_sign_in_layout.xml
+++ b/app/src/main/res/layout/new_sign_in_layout.xml
@@ -6,12 +6,22 @@
     android:layout_height="match_parent">
 
     <include  layout="@layout/toolbar_sign_up"/>
+    <TextView
+        android:id="@+id/ttv_error"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar_sign_up"
+        android:layout_centerHorizontal="true"
+        android:textColor="#e90b0b"
+        android:text="Incorrect username or password!"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_below="@+id/toolbar_sign_up"
+        android:layout_below="@+id/ttv_error"
         android:orientation="vertical">
 
 
@@ -45,7 +55,8 @@
                 android:paddingBottom="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:inputType="number"
+                android:digits="0123456789+"
+                android:inputType="phone"
                 android:hint="071 008 1125"/>
 
 
@@ -72,7 +83,7 @@
                 android:paddingBottom="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:inputType="number"
+                android:inputType="textPassword"
                 android:hint="Enter password here"/>
 
 
