--- a/app/src/main/res/layout/password_layout.xml
+++ b/app/src/main/res/layout/password_layout.xml
@@ -54,8 +54,9 @@
                 android:background="@android:color/transparent"
                 android:paddingBottom="10dp"
                 android:paddingRight="10dp"
+                android:nextFocusDown="@id/edt_password_confirm"
                 android:paddingTop="10dp"
-                android:inputType="number"
+                android:inputType="textPassword"
                 android:hint="Enter password"/>
 
 
@@ -76,7 +77,7 @@
                 android:paddingBottom="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:inputType="number"
+                android:inputType="textPassword"
                 android:hint="Confirm password"/>
 
 
