--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
     android:layout_height="match_parent"
+    android:foreground="?android:attr/selectableItemBackground"
     tools:context=".activities.HomeActivity">
 
 
@@ -24,6 +25,8 @@
         app:menu="@menu/drawer_menu"
         app:headerLayout="@layout/nav_header"
         android:theme="@style/NavigationView"
+        app:itemIconTint="@color/colorDarkGrey"
+        app:itemTextColor="@color/colorDarkGrey"
         android:layout_gravity="start"
         android:fitsSystemWindows="true">
 
