--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#504037</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorGrey">#8b8989</color>
+    <color name="colorDarkGrey">#6c6c6c</color>
     <color name="colorGreen">#66df5d</color>
     <color name="colorLightGrey">#e1e1e1</color>
 </resources>
