changed userlayout to small

--- a/app/src/main/res/layout/nopost_layout.xml
+++ b/app/src/main/res/layout/nopost_layout.xml
@@ -9,7 +9,6 @@
         android:textSize="40sp"
         android:gravity="center"
         android:visibility="gone"
-        android:textColor="#000"
-        android:background="#fff"
+        android:textColor="@color/colorPrimaryDark"
         android:text="NO POSTS YET"/>
 </LinearLayout>
