--- a/app/src/main/res/layout/sent_message_holder.xml
+++ b/app/src/main/res/layout/sent_message_holder.xml
@@ -22,16 +22,17 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:padding="6dp"
+            android:textAlignment="textStart"
             android:textColor="#ffffff"
             android:layout_marginTop="4dp"/>
         <TextView
             android:id="@+id/ttv_time_sent"
             android:text="15:38"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textSize="10sp"
             android:textStyle="bold"
-
+            android:layout_gravity="top"
             android:padding="4dp"
             android:textColor="#bfbaba"
             android:layout_marginTop="4dp"/>
